// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat/messages/discord GetMessages when specified destination does exist performs correctly 1`] = `
Object {
  "value": ObjectContaining {
    "messages": ArrayContaining [
      ObjectContaining {
        "author": ObjectContaining {
          "id": Any<String>,
        },
        "createdAt": Any<Number>,
        "id": Any<String>,
      },
    ],
    "nextPage": Any<String>,
    "rateLimit": ObjectContaining {
      "bucket": Any<String>,
      "remainingRequests": Any<Number>,
      "remainingRequestsPercentage": Any<Number>,
      "resetAfter": Any<Number>,
      "resetTimestamp": Any<Number>,
      "totalRequests": Any<Number>,
    },
  },
}
`;

exports[`chat/messages/discord GetMessages when specified destination does exist performs correctly 2`] = `
Object {
  "value": ObjectContaining {
    "messages": ArrayContaining [
      ObjectContaining {
        "author": ObjectContaining {
          "id": Any<String>,
        },
        "createdAt": Any<Number>,
        "id": Any<String>,
      },
    ],
    "rateLimit": ObjectContaining {
      "bucket": Any<String>,
      "remainingRequests": Any<Number>,
      "remainingRequestsPercentage": Any<Number>,
      "resetAfter": Any<Number>,
      "resetTimestamp": Any<Number>,
      "totalRequests": Any<Number>,
    },
  },
}
`;

exports[`chat/messages/discord GetMessages when specified destination does not exist returns error 1`] = `
Object {
  "error": ObjectContaining {
    "kind": StringMatching /HTTPError/,
    "message": StringMatching /Expected HTTP error/,
    "properties": ObjectContaining {
      "rateLimit": ObjectContaining {
        "bucket": Any<String>,
        "remainingRequests": Any<Number>,
        "remainingRequestsPercentage": Any<Number>,
        "resetAfter": Any<Number>,
        "resetTimestamp": Any<Number>,
        "totalRequests": Any<Number>,
      },
      "title": Any<String>,
    },
    "statusCode": Any<Number>,
  },
}
`;
